# cuda_learning

./: README.md
matrix_mul/: CMakeLists.txt
matrix_mul/cuda/: matrix.cu
matrix_mul/include/: matmul.cuh
matrix_mul/src/: main.cpp
